--- a/Алгоритмы и структуры данных/Сортировки.md
+++ b/Алгоритмы и структуры данных/Сортировки.md
@@ -35,7 +35,7 @@ void InsertionSort(vector<int>& values) {
 * Без каких либо модификаций - $O(n^2)$
 * Если добавить флаг, то возможен лучший случай с $O(n)$
 
-![[1_49e0bb0f63_63adb81133.gif]]
+![bubble](/images/1_49e0bb0f63_63adb81133.gif)
 ```c++
 void BubbleSort(vector<int>& values) {
 	for (size_t idx_i = 0; idx_i + 1 < values.size(); ++idx_i) {
@@ -85,7 +85,7 @@ void BubbleSort(vector<int>& values) {
 Свойства:
 * Сложность: $O(n*log_2(n))$ 
 * Стабильная
-![[184_13_2ce8dc5e4e_0721bebc5e.gif]]
+![merge](/images/184_13_2ce8dc5e4e_0721bebc5e.gif)
 #### Galloping mode
 
 В случае, если из массива A переноситься подряд несколько элементов, то увеличивается шаг проверки A и B, чтобы найти границу, до которой можно переносить элементы без сравнений. Это позволяет кратно увеличить скорость слияния
@@ -100,7 +100,7 @@ void BubbleSort(vector<int>& values) {
 * Не стабильная
 
 
-![[184_11_3c7583c6cd_59878a71a8.gif]]
+![quicksort](/images/184_11_3c7583c6cd_59878a71a8.gif)
 ### Разбиение Ломуто
 
 * __Pivot__ выбирается, как самый правый элемент
@@ -135,7 +135,7 @@ void BubbleSort(vector<int>& values) {
 4) Если порядок нарушился, но текущий $run < minrun$, то дополняем $run$ до минимального значения
 
 Далее следует модифицированное или обычное слияние:
-- [[#Galloping mode]]
-- [[#Сортировка слиянием (merge sort)]]
+- [#Galloping-mode]
+- [#Сортировка-слиянием-(merge-sort)]
 
 
