--- a/Алгоритмы и структуры данных/Сортировки.md
+++ b/Алгоритмы и структуры данных/Сортировки.md
@@ -135,7 +135,7 @@ void BubbleSort(vector<int>& values) {
 4) Если порядок нарушился, но текущий $run < minrun$, то дополняем $run$ до минимального значения
 
 Далее следует модифицированное или обычное слияние:
-- [#Galloping-mode]
-- [#Сортировка-слиянием-(merge-sort)]
+- [Galloping mode](#Galloping-mode)
+- [Merge sort](#Сортировка-слиянием-(merge-sort))
 
 
