--- a/Алгоритмы и структуры данных/Сортировки.md
+++ b/Алгоритмы и структуры данных/Сортировки.md
@@ -136,6 +136,6 @@ void BubbleSort(vector<int>& values) {
 
 Далее следует модифицированное или обычное слияние:
 - [Galloping mode](#Galloping-mode)
-- [Merge sort](#Сортировка-слиянием-(merge-sort))
+- [Merge sort](#Сортировка-слиянием-\(merge-sort\))
 
 
