--- a/Олимпиадное программирование/Асимптотики.md
+++ b/Олимпиадное программирование/Асимптотики.md
@@ -8,4 +8,4 @@
 
 От двух переменных: n,m: n**2 + m => O(n**2 + m)
 
- ![img](/images/"Pasted image 20240916114857.png")
+ ![img](/images/"BigO.png")
